<resources>
    <string name="app_name">SignDoc</string>

    <string name="continue_text">Continue</string>
    <string name="email_hint">Ex. Johndoe@gmail.com</string>
    <string name="email">Email</string>
    <string name="phone">Phone number</string>
    <string name="by_clicking_continue">by clicking continue you must agree to near labs\n Terms &amp; Conditions and Privacy Policy</string>
    <string name="already_have_account">Already have NEAR account?\n Log in with NEAR</string>
    <string name="create_account">Create an Account</string>
    <string name="register_email_mobile">Register with your email or mobile</string>
    <string name="account_already_exists">User account already exists</string>
    <string name="full_name_error">Please enter your full name</string>
    <string name="wallet_name_error">Account id should only contain : lowercase alphanumeric characters with only dash or underscore special characters and no spaces</string>


    <string name="login_into">Log into Account</string>
    <string name="login_account">Login with your near account</string>
    <string name="account_id">Account ID</string>
    <string name="account_hint">johnd</string>
    <string name="login_text">Login</string>
    <string name="email_error">Please Enter a Valid Email Address</string>
    <string name="phone_error">Please Enter a Valid Phone Number</string>
    <string name="email_error_same">Please Enter a Different Email Address Than Your Current Email</string>
    <string name="phone_error_same">Please Enter a Different Phone Number Than Your Current Phone Number</string>
    <string name="name_error_same">Please Enter a Different Name Than Your Current Name</string>
    <string name="name_empty_error">Please Enter a Valid Name</string>S
    <string name="login_text_error">Please Enter Valid Login Credentials</string>
    <string name="dont_have_account">Don\'t have NEAR account?\n Create Account</string>

    <string name="create_near">Create NEAR Account</string>
    <string name="enter_id">Enter an Account ID to use with your NEAR account. Your Account ID will be used for all NEAR operations, including sending and receiving assets.\n</string>
    <string name="full_name">Full Name</string>
    <string name="full_name_hint">Ex. John doe</string>

    <string name="sent_email">We\'ve sent a 6-digit verification code to the email address</string>
    <string name="enter_verification">Enter verification code</string>
    <string name="didnt_receive">Didn\'t receive your code\?</string>
    <string name="resend_code">Resend your code </string>
    <string name="resend_code_confirmation">Authentication Code Resent</string>
    <string name="sent_code_email_current">We have sent a 6-digit authentication code to your current email address</string>
    <string name="sent_code_email_new">We have sent a 6-digit authentication code to your new email address</string>
    <string name="sent_code_phone">We have sent a 6-digit authentication code to your phone</string>
    <string name="sent_code_phone_current">We have sent a 6-digit authentication code to your current email address</string>

    <string name="upload">Upload</string>
    <string name="sign">Sign</string>
    <string name="send">Send</string>

    <string name="upload_doc">Upload your document</string>
    <string name="doc_info">Pdf, doc, docx, xls, xlsx, png, jpg, jpeg, tiff\n Max 50 MB</string>
    <string name="title">Title</string>
    <string name="title_hint">contract12.01.2022.pdf</string>
    <string name="description">Description</string>
    <string name="desc_hint">Ex. Redeemable Art</string>
    <string name="choose_file">Choose File</string>
    <string name="sign_doc">Sign Document</string>
    <string name="upload_file">Upload File</string>

    <string name="sent_doc_text">The minted document with token\'s id and hash information were sent to your e-mail</string>
    <string name="go_home">Go to homepage</string>
    <string name="token_id">Token Id</string>
    <string name="doc_hash">Your Document\'s Hash:</string>

    <string name="sign_order">Set Signing Order</string>
    <string name="add_recipient">Add another recipient</string>

    <string name="notifications">Notifications</string>

    <string name="phone_example">Ex. (373) 378 8383</string>
    <string name="email_example">Ex. abc@yourmail.org</string>

    <string name="last_modified_at">Last Modified</string>
    <string name="no_record">No Record Found</string>


</resources>