<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_signdoc"
        android:layout_marginTop="18dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DFDFE0"
        android:layout_marginTop="18dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/create_account"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="49dp"
        android:fontFamily="@font/inter_medium_500"
        android:textColor="#1D2C3C"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/register_email_mobile"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="11dp"
        android:fontFamily="@font/inter_regular_400"
        android:textColor="#5E6872"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_marginTop="37dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:fontFamily="@font/inter_medium_500"
            android:text="@string/email"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/sep"
            android:textColor="#475766"/>

        <View
            android:layout_width="20dp"
            android:layout_height="1dp"
            android:id="@+id/sep"
            android:layout_centerInParent="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:fontFamily="@font/inter_medium_500"
            android:text="@string/phone"
            android:layout_toEndOf="@id/sep"
            android:layout_centerVertical="true"
            android:textColor="#475766"/>
    </RelativeLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginHorizontal="22dp"
        android:background="#F5F5F5"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:text="@string/email"
            android:layout_marginTop="15dp"
            android:id="@+id/signUpMethod"
            android:textColor="#6F6E73"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/EmailPhone"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/input_field_bg"
            android:fontFamily="@font/inter_regular_400"
            android:layout_marginHorizontal="14dp"
            android:hint="@string/email_hint"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingHorizontal="14dp"
            android:textColor="#828282"
            android:textColorHint="@color/hint_color"
            android:layout_marginTop="10dp"
            />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/white"
            android:layout_marginHorizontal="15dp"
            android:text="@string/continue_text"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/dark_blue"
            android:textSize="14sp"
            android:fontFamily="@font/inter_semibold_600"
            android:gravity="center"
            app:cornerRadius="7dp"
            android:textAllCaps="false"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/by_clicking_continue"
        android:textColor="#5E6872"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DFDFE0"
        android:layout_marginTop="17dp"
        android:layout_marginHorizontal="36dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="86dp"
        android:text="@string/already_have_account"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textColor="#5E6872"/>


</LinearLayout>
