<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <include layout="@layout/tool_bar_main"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_left"
            android:layout_marginStart="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/inter_semibold_600"
            android:text="@string/upload_file"
            android:id="@+id/sectionName"
            android:layout_centerInParent="true"/>


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DFDFE0"
        android:layout_marginTop="18dp"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="11dp"
        >



        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bg_gray"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="90dp"
            android:id="@+id/sep1"
            app:trackColor="#DFDFE0"
            app:indicatorColor="@color/dark_blue"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_checked"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="65dp"
            android:id="@+id/upload_layout"
            android:layout_alignParentStart="true"/>



        <ImageView
            android:id="@+id/sign_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_checked"
            android:layout_marginEnd="65dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload"
            android:layout_below="@id/upload_layout"
            android:gravity="center"
            android:layout_marginStart="60dp"
            android:fontFamily="@font/inter_medium_500"
            android:textSize="12sp"
            android:textColor="#5E6872"
            android:layout_marginTop="5dp"
            android:id="@+id/upload_text"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign"
            android:layout_below="@id/sign_layout"
            android:gravity="center"
            android:layout_marginStart="60dp"
            android:fontFamily="@font/inter_medium_500"
            android:textSize="12sp"
            android:textColor="#5E6872"
            android:layout_marginTop="5dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_checked"
            android:layout_marginEnd="65dp"
            android:id="@+id/sign_text"
            />

    </RelativeLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</androidx.appcompat.widget.LinearLayoutCompat>